--- a/parts/AM.tex
+++ b/parts/AM.tex
@@ -1891,7 +1891,7 @@
 	\end{definition}
 	\begin{example}
 		\label{ex:trobar una sèrie de Fourier}
-		Volem trobar la sèrie de Fourier de la extensió periòdica de la funció
+		Volem trobar la sèrie de Fourier de l'extensió periòdica de la funció
 		\[f(x)=\begin{cases}
 			\sin(\uppi x) & \text{si } 0\leq x\leq\frac{1}{2} \\
 			0 & \text{si }\frac{1}{2}\leq x\leq 1
