--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -41,6 +41,18 @@
 	\end{theorem}
 	\section{Funcions de variable real}
 	\subsection{Definicions}
+	\begin{definition}[Imatge]
+		\labelname{imatge d'una aplicació}\label{def:imatge d'una aplicació}
+		Siguin \(X\) i \(Y\) dos conjunts, \(A\) un subconjunt de \(X\) i \(f\colon X\longrightarrow Y\) una aplicació. Aleshores definim
+		\[\Ima_{A}(f)=\{f(a)\in Y\mid a\in A\}\]
+		com la imatge de \(f\) per \(A\).
+	\end{definition}
+	\begin{definition}[Antiimatge]
+		\labelname{antiimatge d'una aplicació}\label{def:antiimatge d'una aplicació}
+		Siguin \(X\) i \(Y\) dos conjunts, \(B\) un subconjunt de \(Y\) i \(f\colon X\longrightarrow Y\) una aplicació. Aleshores definim
+		\[\Antiima_{B}(f)=\{x\in X\mid f(x)=b\text{ per a cert }b\in B\}\]
+		com la antiimatge de \(f\) per \(B\).
+	\end{definition}
 	\begin{definition}[Límit]
 		\labelname{límit}\label{def:límit}\
 	\end{definition}
